--- a/fgw/Managerment.form
+++ b/fgw/Managerment.form
@@ -20,9 +20,7 @@
         <children>
           <scrollpane id="7b1ed">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="453" height="317"/>
-              </grid>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-12867136"/>
@@ -61,7 +59,7 @@
         </constraints>
         <properties>
           <foreground color="-16777216"/>
-          <text value="Sreach"/>
+          <text value="Find"/>
         </properties>
       </component>
       <component id="e2411" class="javax.swing.JButton" binding="btnDelete">
@@ -73,7 +71,7 @@
           <text value="Delete"/>
         </properties>
       </component>
-      <component id="c9c4f" class="javax.swing.JLabel" binding="Category">
+      <component id="c9c4f" class="javax.swing.JLabel" binding="Position">
         <constraints>
           <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -90,7 +88,7 @@
           <model/>
         </properties>
       </component>
-      <component id="5f20a" class="javax.swing.JLabel" binding="Price">
+      <component id="5f20a" class="javax.swing.JLabel" binding="Email">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -116,7 +114,7 @@
           <text value="New or Old"/>
         </properties>
       </component>
-      <component id="42d49" class="javax.swing.JRadioButton" binding="rbNew">
+      <component id="42d49" class="javax.swing.JRadioButton" binding="rbMale">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -182,11 +180,11 @@
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-16777216"/>
+          <background color="-258"/>
           <enabled value="false"/>
           <font size="30"/>
           <foreground color="-16777216"/>
-          <text value="Welcome To Admin"/>
+          <text value="Hello Admin"/>
         </properties>
       </component>
       <component id="3357b" class="javax.swing.JButton" binding="btnAdd">
